RESOLVED FIXED132071
[New Multicolumn] Assertion failure in huge-column-count.html
https://bugs.webkit.org/show_bug.cgi?id=132071
Summary [New Multicolumn] Assertion failure in huge-column-count.html
Dave Hyatt
Reported 2014-04-23 12:48:00 PDT
My fix to try to stop nested flow threads from having regions associated with them in the outer flow thread wasn't complete enough. I need to patch a deeper function to stop this from happening.
Attachments
Patch (2.26 KB, patch)
2014-04-23 12:52 PDT, Dave Hyatt
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion (905.06 KB, application/zip)
2014-04-23 14:10 PDT, Build Bot
no flags
Patch (2.52 KB, patch)
2014-04-23 14:18 PDT, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2014-04-23 12:52:36 PDT
Dave Hyatt
Comment 2 2014-04-23 13:01:31 PDT
Fixed in r167720.
WebKit Commit Bot
Comment 3 2014-04-23 13:50:45 PDT
Re-opened since this is blocked by bug 132075
Tim Horton
Comment 4 2014-04-23 13:51:45 PDT
Dave Hyatt
Comment 5 2014-04-23 13:56:21 PDT
This blocks columns from being turned on.
Build Bot
Comment 6 2014-04-23 14:10:41 PDT
Comment on attachment 229999 [details] Patch Attachment 229999 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6416066171371520 New failing tests: fast/multicol/newmulticol/spanner2.html fast/multicol/newmulticol/spanner6.html fast/multicol/newmulticol/spanner4.html fast/multicol/newmulticol/clipping-top-overflow.html fast/multicol/newmulticol/spanner1.html fast/multicol/newmulticol/spanner7.html fast/multicol/newmulticol/spanner5.html fast/multicol/newmulticol/spanner3.html
Build Bot
Comment 7 2014-04-23 14:10:44 PDT
Created attachment 230006 [details] Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Dave Hyatt
Comment 8 2014-04-23 14:18:18 PDT
Dave Hyatt
Comment 9 2014-04-23 14:28:25 PDT
Fixed in r167723.
Note You need to log in before you can comment on or make changes to this bug.